# ral

./: Cargo.toml  LICENSE-MIT  README.md
examples/: example.rs
examples/stm32/: mod.rs  peripherals.rs
examples/stm32/peripherals/: gpioa.rs
examples/stm32/peripherals/gpioa/: moder.rs
generator/: Cargo.toml
generator/src/: cluster.rs  device.rs  field.rs  generate.rs  lib.rs  main.rs  overrides.rs  package.rs  peripheral.rs  register.rs  utils.rs
lib/: Cargo.toml
lib/examples/example/: main.rs
lib/examples/example/cpu32/: mod.rs  types.rs
lib/examples/example/cpu32/peripherals/some/: either.rs  mod.rs
lib/src/: lib.rs
macro/: Cargo.toml
macro/src/: field.rs  field_type.rs  lib.rs  parse.rs  register.rs  render.rs  spanned.rs  uses.rs
macro/src/register/: render.rs
src/: lib.rs
