[package]
name = "ral"
version = "0.2.0-SNAPSHOT"
description = "Base layer for generated libraries for specific MCUs"
authors = ["Vasily Kochnev"]
edition = "2018"
repository = "https://github.com/vkochnev/ral"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["embedded", "no-std", "hardware-support"]
keywords = ["register", "bare-metal", "no-std"]

[dependencies]
vcell = "0.1.0"