[package]
name = "ral-gen"
version = "0.2.0"
description = "Base layer generator for specific MCUs"
authors = ["Vasily Kochnev"]
edition = "2018"
repository = "https://github.com/vkochnev/ral"
documentation = "https://docs.rs/ral-gen"
license = "MIT OR Apache-2.0"
readme = "../README.md"
categories = ["embedded", "no-std", "hardware-support", "command-line-utilities"]
keywords = ["svd", "embedded", "register", "bare-metal", "ral", "generator"]

[[bin]]
doc = false
name = "ral-gen"
path = "src/main.rs"

[dependencies]
svd-parser = "0.10"
anyhow = "1.0"
quote = "1.0"
indoc = "1.0"
unindent = "0.1"
proc-macro2 = "1.0"
structopt = "0.3"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }