[package]
name = "ral-macro"
version = "0.2.0-SNAPSHOT"
description = "The ral procedural macro implementations"
authors = ["Vasily Kochnev"]
edition = "2018"
repository = "https://github.com/vkochnev/ral"
license = "MIT OR Apache-2.0"
readme = "../README.md"
categories = ["embedded", "no-std", "hardware-support"]
keywords = ["register", "bare-metal", "no-std", "ral"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }