[package]
name = "ral-macro"
version = "0.3.0-SNAPSHOT"
description = "The ral procedural macro implementations"
authors = ["Vasily Kochnev"]
edition = "2018"
repository = "https://github.com/vkochnev/ral"
documentation = "https://docs.rs/ral-macro"
license = "MIT OR Apache-2.0"
readme = "../README.md"
categories = ["embedded", "no-std", "hardware-support"]
keywords = ["svd", "embedded", "register", "bare-metal", "ral"]

[lib]
proc-macro = true

[dependencies]
convert_case = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }